--- a/styles.css
+++ b/styles.css
@@ -603,19 +603,28 @@ h6 {
   .dropdown .drop-sub {
     position: relative;
     transition: width 4s; }
-    .dropdown .drop-sub .dropdown-content {
-      width: 170px;
-      width: 10.625rem;
+    .dropdown .drop-sub .drop-sub-content {
       position: absolute;
       top: 0;
-      left: 100%;
-      opacity: 0;
-      transition: width 1s; }
+      left: 50%;
+      display: none; }
     .dropdown .drop-sub:hover .dropdown-content {
-      width: 100%;
-      opacity: 1; }
+      display: block; }
     .dropdown .drop-sub a::after {
       display: none; }
+
+.drop-sub-content {
+  -webkit-animation-name: drop-sub-content;
+  -webkit-animation-duration: .8s;
+  animation-name: drop-sub-content;
+  animation-duration: .8s;
+  animation-fill-mode: both; }
+
+@keyframes drop-sub-content {
+  from {
+    left: 90%; }
+  to {
+    left: 100%; } }
 
 @media (max-width: 767px) {
   .dropdown > a {
