--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 // === Font === //
-$font-body: 'Open Sans', sans-serif;
+$font-body: 'Conv_roboto', 'Open Sans', sans-serif;
 
 // === Font Weight === //
 $font-weight: (
